In SVGAttributeEditor.xib, the attributeStepperAction was connected to the NSStepper for the attribute value in Interface Builder.

--- a/MacSVG Plugin Projects/macSVG Plugins/SVGAttributeEditor/SVGAttributeEditor/SVGAttributeEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/SVGAttributeEditor/SVGAttributeEditor/SVGAttributeEditor.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1217" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -118,7 +119,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <stepperCell key="cell" continuous="YES" alignment="left" maxValue="100" id="mpp-kd-chd"/>
                             <connections>
-                                <action selector="itemTextFieldUpdated:" target="-2" id="gX5-mw-1BE"/>
+                                <action selector="attributeStepperAction:" target="-2" id="cSP-MO-cdn"/>
                             </connections>
                         </stepper>
                         <comboBox verticalHuggingPriority="750" misplaced="YES" id="H5t-vh-jJ6">
