Added "text-rendering" attribute to text elements in document templates, with value set to "geometricPrecision"

--- a/macSVG/Resources/Templates/Untitled-1.xhtml
+++ b/macSVG/Resources/Templates/Untitled-1.xhtml
@@ -27,7 +27,7 @@ xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape">
         width="640" height="744"  />
         <text id="sample_text_element" x="200px" y="320px" font-family="Helvetica"
     font-size="30px" fill="black" xml:space="preserve"
-    text-anchor="middle" transform="" style="outline-style:none;">Sample Text Element</text>
+    text-anchor="middle" text-rendering="geometricPrecision" transform="" style="outline-style:none;">Sample Text Element</text>
       </g>
     </svg>
   </body>
